Limit method ID return

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+## CHANGES IN VERSION 0.1.18
+* Fixed `availablePHGMethods()`:
+  + Now returns only method IDs for graphs with more than 100 samples in the
+    data
+  + This prevents publicly available testing methods to be displayed for
+    new PHG users.
+
+
 ## CHANGES IN VERSION 0.1.17
 * Added new `"DEMO"` method parameter for `PHGMethod()` constructor:
   + specified as `PHGMethod("DEMO")`
