--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+## CHANGES IN VERSION 0.2.2
+* Fixed issue with `DEMO` method endpoint returning incorrect dimensional data
+  for specific Maize PHGv1 methods
+
+
 ## CHANGES IN VERSION 0.2.1
 * Added new function, `plotDot()`
   + Creates dot plots from `.anchorspro` files
